--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.DayNight">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".FoodDashboard" />
-        <activity android:name=".AddFood"></activity>
+        <activity android:name=".AddFood" />
+        <activity android:name=".Composer"/>
     </application>
 
 </manifest>
