--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Fruit App"
+        android:label="Food App"
         android:supportsRtl="true"
+        android:largeHeap="true"
+        android:hardwareAccelerated="false"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="Fruit App"
+            android:label="Food App"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +21,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FoodDashboard" />
-        <activity android:name=".AddFood" />
-        <activity android:name=".Composer"/>
+        <activity android:name=".FoodDashboard"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+        <activity android:name=".AddFood"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+        <activity android:name=".Composer"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
